infra/k8s/apps/base/store-ui/store-ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: store-ui-service
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: store-ui-deployment
