infra/k8s/apps/base/store-ui/store-ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ui-frontend-ingress"
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-demo-group
    alb.ingress.kubernetes.io/group.order: '4'
spec:
  ingressClassName: alb
  rules:
  - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "store-ui-service"
                port:
                  number: 80
